historia-section esqueleto pronto

--- a/index.html
+++ b/index.html
@@ -13,37 +13,79 @@
         <div class="top-bar--wrapper">
             <div class="address">
                 <p>lorem ipsum</p>
-                <h6>Endereço</h6>
+                <h5>Endereço</h5>
             </div>
             <img src="" alt="A Oliveira">
             <div class="contact">
                 <p>lorem ipsum</p>
-                <h6>Contato</h6>
+                <h5>Contato</h5>
             </div>
         </div>
 
         <nav class="navigation">
             <ul class="nav-list">
-                <li class="nav-item historia">História</li>
-                <li class="nav-item projetos">Projetos</li>
-                <li class="nav-item servicos">Serviços</li>
-                <li class="nav-item clientes">Clientes</li>
-                <li class="nav-item estrutura">Estrutura</li>
-                <li class="nav-item fornecedores">Fornecedores</li>
+                <div class="row row-1">
+                    <li class="nav-item historia">História</li>
+                    <span></span>
+                    <li class="nav-item projetos">Projetos</li>
+                </div>
+                <div class="row row-2">
+                    <span></span>
+                    <li class="nav-item servicos">Serviços</li>
+                    <span></span>
+                </div>
+                <div class="row row-3">
+                    <li class="nav-item clientes">Clientes</li>
+                    <span></span>
+                    <li class="nav-item estrutura">Estrutura</li>
+                </div>
+                <div class="row row-4">
+                    <span></span>
+                    <li class="nav-item fornecedores">Fornecedores</li>
+                    <span></span>
+                </div>
             </ul>
         </nav>
         
-        <!-- <svg></svg> -->
-        <div class="svg-placeholder"></div>
+        <div class="header-graphic"></div>
     </header>
     
     <main>
-        <section class="historia">
-            <!-- <svg></svg> -->
-            <div class="svg-placeholder"></div>
-            <div class="historia--wrapper">
-                <p>cnpj</p>
-                <h2>História</h2>
+        <section class="historia-section">
+            <div class="historia-graphic">
+                <!-- <svg></svg> -->
+            </div>
+
+            <div class="historia-title--wrapper">
+                <p class="cnpj">cnpj</p>
+                <h2 class="title">História</h2>
+            </div>
+
+            <div class="historia-text--wrapper">
+                <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat iure sint quae ipsam a sed eum mollitia, distinctio reiciendis. Eveniet nesciunt aliquid quas, amet at quis voluptates fugiat odio saepe.</p>
+                <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat iure sint quae ipsam a sed eum mollitia, distinctio reiciendis. Eveniet nesciunt aliquid quas, amet at quis voluptates fugiat odio saepe.</p>
+            </div>
+
+            <div class="historia-image">
+                <img src="https://placehold.co/600x400" alt="">
+                <small class="legenda">legenda</small>
+            </div>
+        </section>
+
+        <section class="projetos-section">
+            <h2 class="projetos-title">Energia <br> Verde</h2>
+            <h3 class="projetos-subtitle">
+                subtitiLorem, ipsum dolor sit amet consectetur adipisicing elit. Animi maxime quae sapiente amet, eaque velit corporis.
+            </h3>
+            <p class="text">1Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem similique voluptas obcaecati sunt aliquid impedit laborum consequuntur illo ratione debitis quae rerum nemo earum facere repudiandae dolorem mollitia, error labore!</p>
+            <p class="text">2Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem similique voluptas obcaecati sunt aliquid impedit laborum consequuntur illo ratione debitis quae rerum nemo earum facere repudiandae dolorem mollitia, error labore!</p>
+            <p class="text">3Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem similique voluptas obcaecati sunt aliquid impedit laborum consequuntur illo ratione debitis quae rerum nemo earum facere repudiandae dolorem mollitia, error labore!</p>
+
+            <div class="projetos-image">
+                <img src="https://placehold.co/300x200" alt="">
+            </div>
+            <div class="projetos-timeline">
+
             </div>
         </section>
     </main>
