projetos-section on desktop pronto

--- a/index.html
+++ b/index.html
@@ -73,7 +73,31 @@
         </section>
 
         <section class="projetos-section">
-            <h2 class="projetos-title">Energia <br> Verde</h2>
+            <div class="projetos-grid--container">
+                <h2 class="title">Energia <br> Verde</h2>
+                <!-- <h2 class="verde">Verde</h2> -->
+                <h3 class="subtitle">Precursora diante das principais novas tecnologias</h3>
+                <p class="p1">Ciente da importância das iniciativas de conservação ambiental, no final de 2022 foi implantada a adoção da substituição do óleo mineral por óleo vegetal em transformadores.</p>
+                <p class="p2">A diretriz, despertada por uma iniciativa em prol do meio ambiente, será implementada ao longo do ano de 2023 para os novos clientes e sem custo adicional para os antigos clientes que fizerem a manutenção dos seus transformadores.</p>
+                <p class="p3">“À medida que a tecnologia avança e dispomos de mais recursos e conhecimento em prol da preservação do planeta, entendemos que como empresa temos uma responsabilidade não apenas com os nossos clientes, mas também com o meio ambiente. Nosso objetivo central é fornecer um trabalho de primeira linha e com alto nível de eficiência, então quando entendemos que era possível agregar uma iniciativa verde que resultasse em benefícios ainda mais amplos para os clientes, saímos na frente e adotamos a substituição”<br>
+                    <span class="legenda">explica Augusto Oliveira</span>
+                </p>
+                <p class="p4">O óleo de base vegetal, de acordo com as informações fornecidas pelo fabricante, é composto de oleaginosas renováveis, com ausência de enxofre corrosivo e PCBs e excede as expectativas das normas ABNT NBR 15422 e ASTM D6871. É altamente biodegradável, reciclável e passível de tratamento de regeneração. Seu descarte implica em um custo muito inferior ao do óleo mineral. </p>
+                <div class="image">
+                    <img src="#">
+                    <small class="legenda">legenda</small>
+                </div>
+            </div>
+            <div class="timeline">
+                <h4>1983</h4>
+                <img src="" alt="A Oliveira" class="logo">
+                <div class="date--wrapper">
+                    <small>Inovação & Renovação</small>
+                    <h4>2023</h4>
+                </div>
+            </div>
+              
+            <!-- <h2 class="projetos-title">Energia <br> Verde</h2>
             <h3 class="projetos-subtitle">
                 subtitiLorem, ipsum dolor sit amet consectetur adipisicing elit. Animi maxime quae sapiente amet, eaque velit corporis.
             </h3>
@@ -86,8 +110,10 @@
             </div>
             <div class="projetos-timeline">
 
-            </div>
+            </div> -->
         </section>
+
+
     </main>
     
     <footer>
