--- a/index.html
+++ b/index.html
@@ -62,12 +62,12 @@
             </div>
 
             <div class="historia-text--wrapper">
-                <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat iure sint quae ipsam a sed eum mollitia, distinctio reiciendis. Eveniet nesciunt aliquid quas, amet at quis voluptates fugiat odio saepe.</p>
-                <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat iure sint quae ipsam a sed eum mollitia, distinctio reiciendis. Eveniet nesciunt aliquid quas, amet at quis voluptates fugiat odio saepe.</p>
+                <p class="text">Fundada no Rio de Janeiro pelo seu diretor, Augusto Oliveira, no ano de 1986, a empresa A Oliveira atua no segmento de energia elétrica voltada para média e alta tensão. A respeitabilidade conquistada no mercado é pautada pela filosofia de entrega segura, ágil, de extrema objetividade e eficiência. A inteligência nas áreas de assessoria técnica, projetos, viabilidade técnica, além das atualizações diante das mudanças tecnológicas são os pilares de importância ímpar no desenvolvimento da empresa ao longo destes quase 40 anos.</p>
+                <p class="text">Com uma carteira de clientes ímpares e consagrados em suas áreas, em destaque Multiplan, Cyrela, McDonald's, Gafisa e Amazon [Prologis ]e GLP Logística, Burger King, VBI Empreendimentos, Patrimar.</p>
             </div>
 
             <div class="historia-image">
-                <img src="https://placehold.co/600x400" alt="">
+                <img src="#" alt="">
                 <small class="legenda">legenda</small>
             </div>
         </section>
@@ -75,7 +75,6 @@
         <section class="projetos-section">
             <div class="projetos-grid--container">
                 <h2 class="title">Energia <br> Verde</h2>
-                <!-- <h2 class="verde">Verde</h2> -->
                 <h3 class="subtitle">Precursora diante das principais novas tecnologias</h3>
                 <p class="p1">Ciente da importância das iniciativas de conservação ambiental, no final de 2022 foi implantada a adoção da substituição do óleo mineral por óleo vegetal em transformadores.</p>
                 <p class="p2">A diretriz, despertada por uma iniciativa em prol do meio ambiente, será implementada ao longo do ano de 2023 para os novos clientes e sem custo adicional para os antigos clientes que fizerem a manutenção dos seus transformadores.</p>
@@ -96,24 +95,24 @@
                     <h4>2023</h4>
                 </div>
             </div>
-              
-            <!-- <h2 class="projetos-title">Energia <br> Verde</h2>
-            <h3 class="projetos-subtitle">
-                subtitiLorem, ipsum dolor sit amet consectetur adipisicing elit. Animi maxime quae sapiente amet, eaque velit corporis.
-            </h3>
-            <p class="text">1Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem similique voluptas obcaecati sunt aliquid impedit laborum consequuntur illo ratione debitis quae rerum nemo earum facere repudiandae dolorem mollitia, error labore!</p>
-            <p class="text">2Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem similique voluptas obcaecati sunt aliquid impedit laborum consequuntur illo ratione debitis quae rerum nemo earum facere repudiandae dolorem mollitia, error labore!</p>
-            <p class="text">3Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem similique voluptas obcaecati sunt aliquid impedit laborum consequuntur illo ratione debitis quae rerum nemo earum facere repudiandae dolorem mollitia, error labore!</p>
-
-            <div class="projetos-image">
-                <img src="https://placehold.co/300x200" alt="">
-            </div>
-            <div class="projetos-timeline">
-
-            </div> -->
         </section>
 
+        <section class="realizacoes-section">
+            <h2 class="title">Realizações</h2>
+            <h3 class="subtitle">Projetos</h3>
+            <p class="big-number">375.220</p>
+        </section>
 
+        <section class="clientes-section">
+            <h3 class="subtitle">Clientes</h3>
+            <p class="medium-number">12.000</p>
+            <div class="logos--grid"></div>
+        </section>
+
+        <section class="fornecedores-section">
+            <h3 class="subtitle">Fornecedores</h3>
+            <div class="logos--grid"></div>
+        </section>
     </main>
     
     <footer>
