primeiras 3 sections finalizadas no desktop

--- a/index.html
+++ b/index.html
@@ -12,12 +12,20 @@
     <header>
         <div class="top-bar--wrapper">
             <div class="address">
-                <p>lorem ipsum</p>
+                <small>
+                    Rua Okir, 57, Jardim Alvorada, Nova Iguaçu<br>
+                    Rio de Janeiro - RJ, 26261-380
+                </small>
                 <h5>Endereço</h5>
             </div>
-            <img src="" alt="A Oliveira">
+            <img class="logo" src="img/logo_laranja.png" alt="A Oliveira">
+            <!-- <div class="logo">
+            </div> -->
             <div class="contact">
-                <p>lorem ipsum</p>
+                <small>
+                    Whatsapp (21) 2667-3652<br>
+                    coliv.engenharia@uol.com.br
+                </small>
                 <h5>Contato</h5>
             </div>
         </div>
@@ -52,47 +60,49 @@
     
     <main>
         <section class="historia-section">
-            <div class="historia-graphic">
-                <!-- <svg></svg> -->
+            <div class="row-1">
+                <div class="historia-graphic">
+                    <img src="img/40anos.svg" alt="40 anos de entrega segura, ágil, de extrema objetividade e eficiência">
+                </div>
+                <div class="historia-title--wrapper">
+                    <small class="cnpj">A. Oliveira Comercial Elétrica LTDA<br>
+                        30.825.996/0001-35</small>
+                    <h2 class="title">História</h2>
+                </div>
             </div>
 
-            <div class="historia-title--wrapper">
-                <p class="cnpj">cnpj</p>
-                <h2 class="title">História</h2>
-            </div>
-
-            <div class="historia-text--wrapper">
+            <div class="historia-text--wrapper row-2">
                 <p class="text">Fundada no Rio de Janeiro pelo seu diretor, Augusto Oliveira, no ano de 1986, a empresa A Oliveira atua no segmento de energia elétrica voltada para média e alta tensão. A respeitabilidade conquistada no mercado é pautada pela filosofia de entrega segura, ágil, de extrema objetividade e eficiência. A inteligência nas áreas de assessoria técnica, projetos, viabilidade técnica, além das atualizações diante das mudanças tecnológicas são os pilares de importância ímpar no desenvolvimento da empresa ao longo destes quase 40 anos.</p>
                 <p class="text">Com uma carteira de clientes ímpares e consagrados em suas áreas, em destaque Multiplan, Cyrela, McDonald's, Gafisa e Amazon [Prologis ]e GLP Logística, Burger King, VBI Empreendimentos, Patrimar.</p>
             </div>
 
             <div class="historia-image">
-                <img src="#" alt="">
-                <small class="legenda">legenda</small>
+                <img src="img/historia-placeholder.jpg" alt="">
+                <small class="legenda"><span class="bold">Imagem:</span> Acervo privado I A Oliveira - Detalhe Gerador</small>
             </div>
         </section>
 
-        <section class="projetos-section">
-            <div class="projetos-grid--container">
-                <h2 class="title">Energia <br> Verde</h2>
-                <h3 class="subtitle">Precursora diante das principais novas tecnologias</h3>
+        <section class="energia-section">
+            <div class="energia-grid--container">
+                <h2 class="title">Energia <br> <span class="green">Verde</span></h2>
+                <h3 class="subtitle">Precursora diante das principais novas <span class="green">tecnologias</span></h3>
                 <p class="p1">Ciente da importância das iniciativas de conservação ambiental, no final de 2022 foi implantada a adoção da substituição do óleo mineral por óleo vegetal em transformadores.</p>
                 <p class="p2">A diretriz, despertada por uma iniciativa em prol do meio ambiente, será implementada ao longo do ano de 2023 para os novos clientes e sem custo adicional para os antigos clientes que fizerem a manutenção dos seus transformadores.</p>
                 <p class="p3">“À medida que a tecnologia avança e dispomos de mais recursos e conhecimento em prol da preservação do planeta, entendemos que como empresa temos uma responsabilidade não apenas com os nossos clientes, mas também com o meio ambiente. Nosso objetivo central é fornecer um trabalho de primeira linha e com alto nível de eficiência, então quando entendemos que era possível agregar uma iniciativa verde que resultasse em benefícios ainda mais amplos para os clientes, saímos na frente e adotamos a substituição”<br>
-                    <span class="legenda">explica Augusto Oliveira</span>
+                    <span class="quote">explica Augusto Oliveira</span>
                 </p>
                 <p class="p4">O óleo de base vegetal, de acordo com as informações fornecidas pelo fabricante, é composto de oleaginosas renováveis, com ausência de enxofre corrosivo e PCBs e excede as expectativas das normas ABNT NBR 15422 e ASTM D6871. É altamente biodegradável, reciclável e passível de tratamento de regeneração. Seu descarte implica em um custo muito inferior ao do óleo mineral. </p>
                 <div class="image">
-                    <img src="#">
+                    <img src="img/energia-placeholder.jpg">
                     <small class="legenda">legenda</small>
                 </div>
             </div>
             <div class="timeline">
-                <h4>1983</h4>
-                <img src="" alt="A Oliveira" class="logo">
+                <h3>1983</h3>
+                <img src="img/simbolo_preto.png" alt="A Oliveira" class="logo">
                 <div class="date--wrapper">
-                    <small>Inovação & Renovação</small>
-                    <h4>2023</h4>
+                    <small class="legenda">Inovação & Renovação</small>
+                    <h3>2023</h3>
                 </div>
             </div>
         </section>
