projetos, clientes e fornecedores 90%

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         <section class="energia-section">
             <div class="energia-grid--container">
                 <h2 class="title">Energia <br> <span class="green">Verde</span></h2>
-                <h3 class="subtitle">Precursora diante das principais novas <span class="green">tecnologias</span></h3>
+                <h4 class="subtitle">Precursora diante das principais novas <span class="green">tecnologias</span></h4>
                 <p class="p1">Ciente da importância das iniciativas de conservação ambiental, no final de 2022 foi implantada a adoção da substituição do óleo mineral por óleo vegetal em transformadores.</p>
                 <p class="p2">A diretriz, despertada por uma iniciativa em prol do meio ambiente, será implementada ao longo do ano de 2023 para os novos clientes e sem custo adicional para os antigos clientes que fizerem a manutenção dos seus transformadores.</p>
                 <p class="p3">“À medida que a tecnologia avança e dispomos de mais recursos e conhecimento em prol da preservação do planeta, entendemos que como empresa temos uma responsabilidade não apenas com os nossos clientes, mas também com o meio ambiente. Nosso objetivo central é fornecer um trabalho de primeira linha e com alto nível de eficiência, então quando entendemos que era possível agregar uma iniciativa verde que resultasse em benefícios ainda mais amplos para os clientes, saímos na frente e adotamos a substituição”<br>
@@ -98,30 +98,36 @@
                 </div>
             </div>
             <div class="timeline">
-                <h3>1983</h3>
+                <h4>1983</h4>
                 <img src="img/simbolo_preto.png" alt="A Oliveira" class="logo">
                 <div class="date--wrapper">
                     <small class="legenda">Inovação & Renovação</small>
-                    <h3>2023</h3>
+                    <h4>2023</h4>
                 </div>
             </div>
         </section>
 
-        <section class="realizacoes-section">
+        <section class="projetos-section">
             <h2 class="title">Realizações</h2>
-            <h3 class="subtitle">Projetos</h3>
-            <p class="big-number">375.220</p>
+            <h3>Projetos</h3>
+            <p class="big-number"><span>+</span>375.220</p>
         </section>
 
         <section class="clientes-section">
-            <h3 class="subtitle">Clientes</h3>
-            <p class="medium-number">12.000</p>
-            <div class="logos--grid"></div>
+            <div class="clientes-title--wrapper">
+                <h3>Clientes</h3>
+                <p class="medium-number"><span>+</span>12.000</p>
+            </div>
+            <div class="logos--grid">
+                <img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt="">
+            </div>
         </section>
 
         <section class="fornecedores-section">
-            <h3 class="subtitle">Fornecedores</h3>
-            <div class="logos--grid"></div>
+            <h3>Fornecedores</h3>
+            <div class="logos--grid">
+                <img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt="">
+            </div>
         </section>
     </main>
     
