--- a/index.html
+++ b/index.html
@@ -129,6 +129,43 @@
                 <img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt="">
             </div>
         </section>
+
+        <section class="servicos-section">
+            <h2 class="title">Serviços</h2>
+            <ul class="lista">
+                <li class="lista-item">Projetos de instalações elétricas média e alta tensão</li>              
+                <li class="lista-item">Manutenção de sistemas elétricos</li>
+                <li class="lista-item">Estudos de eficiência energética em média e alta tensão</li>
+                <li class="lista-item">Consertos de transformadores de média e alta tensão até 2.500KVA</li>                     
+                <li class="lista-item">Negociação de contratos de fornecimento com concessionárias</li>
+                <li class="lista-item">Consultoria em sistemas elétricos</li>
+                <li class="lista-item">Reforma e adequação de subestações às normas vigentes</li>
+                <li class="lista-item">Ligação nova e aumento de carga em subestações</li>
+                <li class="lista-item">Aplicação de padrões técnicos de acordo com as normas</li>
+                <li class="lista-item">Ensaios dielétricos de classes [15 KV,25KV, 36KV]</li>
+                <li class="lista-item">Termografia</li>
+                <li class="lista-item">SPDA</li>
+                <li class="lista-item">Estudo/orçamento referente a redução de custos desnecessários como energia reativa (instalação de banco de capacitores)</li>               
+                <li class="lista-item">Migração para o mercado livre de energia</li>
+                <li class="lista-item">Gestão de faturas</li>
+                <li class="lista-item">Instalação e implantação de projetos de sistema solar</li>      
+                <li class="lista-item">Ultrapassagem entre outras cobranças indevidas em sua conta</li> 
+            </ul>
+        </section>
+
+        <section class="estrutura-section">
+            <div class="estrutura-text--wrapper">
+                <h2 class="title">Estrutura</h2>
+                <div class="estrutura-graphic"></div>
+                <small>Possuímos oficina e escritórios localizados no Rio de Janeiro. Pronto atendimento ágil, com os menores prazos do mercado.</small>
+            </div>
+            <ul class="lista">             
+                <li class="lista-item">Frota própria de veículos como caminhão Munch e cesto aéreo</li>
+                <li class="lista-item">Média de 100 transformadores a pronta entrega</li>
+                <li class="lista-item">2 mil metros de cabos de baixa e alta tensão em estoque</li>      
+                <li class="lista-item">Disponibilidade de chaves, cruzetas e acessórios</li> 
+            </ul>
+        </section>
     </main>
     
     <footer>
