top bar margin fixed

--- a/index.html
+++ b/index.html
@@ -13,15 +13,17 @@
         <div class="top-bar">
             <div class="left">
                 <small>
-                    Rua Okir, 57, Jardim Alvorada, Nova Iguaçu<br>
-                    Rio de Janeiro - RJ, 26261-380
+                    Rua Okir, 57, Jardim Alvorada, <br>
+                    Nova Iguaçu, Rio de Janeiro - RJ<br>
+                    CEP 26261-380
                 </small>
                 <h5>Endereço</h5>
             </div>
             <img class="logo" src="img/logo_laranja.png" alt="A Oliveira">
             <div class="right">
                 <small>
-                    Whatsapp (21) 2667-3652<br>
+                    Whatsapp:<br>
+                    (21) 2667-3652<br>
                     coliv.engenharia@uol.com.br
                 </small>
                 <h5>Contato</h5>
