--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                     <small>A. Oliveira Comercial Elétrica LTDA<br>
                         30.825.996/0001-35
                     </small>
-                    <h2>História</h2>
+                    <h2 class="large-title">História</h2>
                 </div>
             </div>
 
@@ -107,10 +107,10 @@
 
         <section id="energy" class="energy-section">
             <div class="energy-grid--container">
-                <h2>Energia <br>
+                <h2 class="large-title">Energia <br>
                     <span class="green">Verde</span>
                 </h2>
-                <h4>Precursora diante das principais novas <span class="green">tecnologias</span></h4>
+                <h3>Precursora diante das principais novas <span class="green">tecnologias</span></h3>
                 <p>Ciente da importância das iniciativas de conservação ambiental, no final de 2022 foi implantada a adoção da substituição do óleo 
                     mineral por óleo vegetal em transformadores.</p>
                 <p>A diretriz, despertada por uma iniciativa em prol do meio ambiente, será implementada ao longo do ano de 2023 para os novos clientes e 
@@ -130,24 +130,24 @@
                 </figure>
             </div>
             <div class="timeline">
-                <h5>1983</h5>
+                <h4>1983</h4>
                 <img src="img/simbolo_preto.png" alt="A Oliveira" class="logo">
                 <div class="date--wrapper">
                     <small class="italic">Inovação & Renovação</small>
-                    <h5>2023</h5>
+                    <h4>2023</h4>
                 </div>
             </div>
         </section>
 
         <section id="projects" class="projects-section section-padding">
             <h2>Realizações</h2>
-            <h3>Projetos</h3>
+            <h2 class="small-title">Projetos</h2>
             <p class="large number"><span>+</span>375.220</p>
         </section>
 
         <section id="clients" class="clients-section section-padding">
             <div class="clients-title--wrapper">
-                <h3>Clientes</h3>
+                <h2 class="small-title">Clientes</h2>
                 <p class="medium number"><span>+</span>12.000</p>
             </div>
             <div class="logos--grid">
@@ -168,7 +168,7 @@
         </section>
 
         <section id="suppliers" class="suppliers-section section-padding">
-            <h3>Fornecedores</h3>
+            <h2 class="small-title">Fornecedores</h2>
             <div class="logos--grid">
                 <img src="img/fornecedores/onix.png" alt="">
                 <img src="img/fornecedores/romagnole.png" alt="">
@@ -188,7 +188,7 @@
         </section>
 
         <section id="services" class="services-section section-padding">
-            <h2 class="title">Serviços</h2>
+            <h2 class="small-title">Serviços</h2>
             <ul class="list">
                 <li class="list-item">Projetos de instalações elétricas média e alta tensão</li>              
                 <li class="list-item">Manutenção de sistemas elétricos</li>
@@ -212,7 +212,7 @@
 
         <section id="structure" class="structure-section section-padding">
             <div class="structure-text--wrapper">
-                <h2>Estrutura</h2>
+                <h2 class="small-title">Estrutura</h2>
                 <img src="img/estrutura.svg" class="structure-graphic"></img>
                 <small>Possuímos oficina e escritórios localizados no Rio de Janeiro. Pronto atendimento ágil, com os menores prazos do mercado.</small>
             </div>
