--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                 <h2 class="large-title">Energia <br>
                     <span class="green">Verde</span>
                 </h2>
-                <h3>Precursora diante das principais novas <span class="green">tecnologias</span></h3>
+                <h3 class="subtitle">Precursora diante das principais novas <span class="green">tecnologias</span></h3>
                 <p>Ciente da importância das iniciativas de conservação ambiental, no final de 2022 foi implantada a adoção da substituição do óleo 
                     mineral por óleo vegetal em transformadores.</p>
                 <p>A diretriz, despertada por uma iniciativa em prol do meio ambiente, será implementada ao longo do ano de 2023 para os novos clientes e 
@@ -140,7 +140,7 @@
         </section>
 
         <section id="projects" class="projects-section section-padding">
-            <h2>Realizações</h2>
+            <h2 class="medium-title">Realizações</h2>
             <h2 class="small-title">Projetos</h2>
             <p class="large number"><span>+</span>375.220</p>
         </section>
@@ -188,7 +188,7 @@
         </section>
 
         <section id="services" class="services-section section-padding">
-            <h2 class="small-title">Serviços</h2>
+            <h2 class="medium-title">Serviços</h2>
             <ul class="list">
                 <li class="list-item">Projetos de instalações elétricas média e alta tensão</li>              
                 <li class="list-item">Manutenção de sistemas elétricos</li>
@@ -212,7 +212,7 @@
 
         <section id="structure" class="structure-section section-padding">
             <div class="structure-text--wrapper">
-                <h2 class="small-title">Estrutura</h2>
+                <h2 class="medium-title">Estrutura</h2>
                 <img src="img/estrutura.svg" class="structure-graphic"></img>
                 <small>Possuímos oficina e escritórios localizados no Rio de Janeiro. Pronto atendimento ágil, com os menores prazos do mercado.</small>
             </div>
