--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
             <figure>
                 <img src="img/historia-placeholder.jpg" alt="">
-                <figcaption>Imagem: Acervo privado I A Oliveira - Detalhe Gerador</figcaption>
+                <figcaption><span class="bold">Imagem:</span> Acervo privado I A Oliveira - Detalhe Gerador</figcaption>
             </figure>
         </section>
 
