--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
         </section>
 
         <section id="projects" class="projects-section section-padding">
-            <h2>Realizações</h2>
+            <h2>Reali&shy;zações</h2>
             <h2 class="small-title">Projetos</h2>
             <p class="large number"><span>+</span>375.220</p>
         </section>
