--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
         </section>
 
         <section id="suppliers" class="suppliers-section section-padding">
-            <h2 class="small-title">Fornecedores</h2>
+            <h2 class="small-title">Forne&shy;cedores</h2>
             <div class="logos--grid">
                 <img src="img/fornecedores/onix.png" alt="">
                 <img src="img/fornecedores/romagnole.png" alt="">
